--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="nav">
         <li class="nav-item"><a href="#">Home</a></li>
         <li class="nav-item"><a href="#">Login</a></li>
-        <li class="nav-item"><a href="#">Register</a></li>
+        <li class="nav-item"><a href="#">Mis juegos</a></li>
         <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
             <div class="cart-bubble">15</div>
@@ -53,7 +53,7 @@
       </section>
 
       <section class="category">
-        <button class="btn-category">⭐ Los mas jugados ⭐</button>
+        <button class="btn-category selected">⭐ Los mas populares ⭐</button>
         <button class="btn-category">🌍 Aventura 🌍</button>
         <button class="btn-category">🔫 Disparos 🔫</button>
         <button class="btn-category">🔎 Estrategia 🔍</button>
@@ -72,12 +72,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -90,12 +88,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -108,12 +104,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -126,12 +120,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -144,12 +136,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -162,12 +152,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -180,12 +168,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
@@ -198,12 +184,10 @@
               architecto corrupti ullam, excepturi consequatur reprehenderit sit
               quasi magnam optio. Ipsum animi praesentium non assumenda!
             </p>
-            <div class="button-container">
+            <div class="buy-container">
+              <h2 class="price"><span>U$D</span> 99,99</h2>
               <button class="btn-add-cart">
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-              <button class="btn-play">
-                <i class="fa-solid fa-play play-icon"></i>
               </button>
             </div>
           </div>
