Login and Register HTML - CSS

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <nav class="nav">
         <li class="nav-item"><a href="#">Home</a></li>
-        <li class="nav-item"><a href="#">Login</a></li>
+        <li class="nav-item"><a href="/login.html">Login</a></li>
         <li class="nav-item"><a href="#">Mis juegos</a></li>
         <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
