--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
 
       <section class="category">
-        <button class="btn-category selected">⭐ Los mas populares ⭐</button>
+        <button class="btn-category selected">⚡ Ofertas relámpago ⚡</button>
         <button class="btn-category">🌍 Aventura 🌍</button>
         <button class="btn-category">🔫 Disparos 🔫</button>
         <button class="btn-category">🔎 Estrategia 🔍</button>
@@ -62,8 +62,8 @@
       </section>
 
       <section class="cards-section">
-        <div class="cards-container">
-          <div class="card">
+        <div class="cards-container" id="card-container">
+          <!-- <div class="card">
             <img src="/assets/img/joystick.png" alt="Card Image" />
             <h3>Titulo</h3>
             <p>
@@ -78,119 +78,7 @@
                 <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
               </button>
             </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -212,5 +100,7 @@
         <li class="footer-item"><a href="#">Portfolio</a></li>
       </footer>
     </main>
+
+    <script src="/app.js"></script>
   </body>
 </html>
