Pagination and Categories JS

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <button class="btn-category" data-category="fantasy">
           🐲 Fantasy 🐲
         </button>
-        <button class="btn-category" data-category="scifi">👾 Sci-Fi 👾</button>
+        <button class="btn-category" data-category="sci-fi">
+          👾 Sci-Fi 👾
+        </button>
         <button class="btn-category" data-category="racing">
           🚗 Racing 🚗
         </button>
