--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="nav-item"><a href="/">Home</a></li>
         <li class="nav-item"><a href="/login.html">Login</a></li>
         <li class="nav-item"><a href="#">My Games</a></li>
-        <div class="cart-label">
+        <div class="cart-label" id="cart">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
             <div class="cart-bubble">15</div>
           </i>
@@ -84,24 +84,7 @@
       </section>
 
       <section class="cards-section">
-        <div class="cards-container" id="card-container">
-          <!-- <div class="card">
-            <img src="/assets/img/joystick.png" alt="Card Image" />
-            <h3>Titulo</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-              tenetur, praesentium, eveniet perspiciatis numquam repellendus
-              architecto corrupti ullam, excepturi consequatur reprehenderit sit
-              quasi magnam optio. Ipsum animi praesentium non assumenda!
-            </p>
-            <div class="buy-container">
-              <h2 class="price"><span>U$D</span> 99,99</h2>
-              <button class="btn-add-cart">
-                <i class="fa-sharp fa-solid fa-cart-plus add-cart"></i>
-              </button>
-            </div>
-          </div> -->
-        </div>
+        <div class="cards-container" id="card-container"></div>
       </section>
 
       <section class="pagination">
