--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/assets/img/joystick.png"
+      href="/assets/img/favicon.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
@@ -23,22 +23,49 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Games</title>
+    <title>Gamefer</title>
   </head>
   <body>
     <header class="header">
       <div class="logo-img">
-        <img src="/assets/img/joystick.png" alt="Logo image" />
+        <img src="/assets/img/Logo.png" alt="Logo image" />
       </div>
       <nav class="nav">
-        <li class="nav-item"><a href="/">Home</a></li>
-        <li class="nav-item"><a href="/login.html">Login</a></li>
-        <li class="nav-item"><a href="#">My Games</a></li>
-        <div class="cart-label" id="cart">
+        <li class="nav-item">
+          <a href="/"><i class="fa-sharp fa-solid fa-house"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="/login.html"><i class="fa-sharp fa-solid fa-user"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="#"><i class="fa-sharp fa-solid fa-heart"></i></a>
+        </li>
+        <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
-            <div class="cart-bubble">15</div>
+            <div class="cart-bubble">0</div>
           </i>
         </div>
+
+        <div class="cart" id="cart">
+          <div class="cart-container" id="cart-container">
+            <div class="cart-title">My Products</div>
+            <div class="cart-img">
+              <img
+                src="/assets/img/joystick.png"
+                alt="Hero image"
+                height="50px"
+              />
+            </div>
+            <div class="cart-name">Nombre</div>
+            <div class="cart-price"><span>$</span> 150</div>
+            <input type="number" class="cart-input" min="1" max="99" />
+          </div>
+          <div class="cart-total-container">
+            <div class="cart-total">TOTAL</div>
+            <div class="cart-total-price"><span>$</span> 150</div>
+          </div>
+        </div>
+        <div class="overlay"></div>
       </nav>
     </header>
 
@@ -46,9 +73,6 @@
       <section class="hero">
         <div class="hero-text">
           The games you always wanted, at the best price.
-        </div>
-        <div class="hero-img">
-          <img src="/assets/img/joystick.png" alt="Hero image" />
         </div>
       </section>
 
