--- a/index.html
+++ b/index.html
@@ -47,19 +47,8 @@
         </div>
 
         <div class="cart" id="cart">
-          <div class="cart-container" id="cart-container">
-            <div class="cart-title">My Products</div>
-            <div class="cart-img">
-              <img
-                src="/assets/img/joystick.png"
-                alt="Hero image"
-                height="50px"
-              />
-            </div>
-            <div class="cart-name">Nombre</div>
-            <div class="cart-price"><span>$</span> 150</div>
-            <input type="number" class="cart-input" min="1" max="99" />
-          </div>
+          <div class="cart-title">My Products</div>
+          <div class="cart-container" id="cart-container"></div>
           <div class="cart-total-container">
             <div class="cart-total">TOTAL</div>
             <div class="cart-total-price"><span>$</span> 150</div>
@@ -72,13 +61,13 @@
     <main>
       <section class="hero">
         <div class="hero-text">
-          The games you always wanted, at the best price.
+          The games you always wanted, at the best price...
         </div>
       </section>
 
       <section class="category">
-        <button class="btn-category selected" data-category="best">
-          🌟 The best 🌟
+        <button class="btn-category selected" data-category="all">
+          🌟 SHOW ALL 🌟
         </button>
         <button class="btn-category" data-category="mmorpg">
           🌍 MMORPG 🌍
@@ -128,6 +117,7 @@
       </footer>
     </main>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/app.js"></script>
   </body>
 </html>
