--- a/index.html
+++ b/index.html
@@ -47,8 +47,21 @@
         </div>
 
         <div class="cart" id="cart">
-          <div class="cart-title">My Products</div>
-          <div class="cart-container" id="cart-container"></div>
+          <div class="cart-title">My Games</div>
+          <div class="cart-container" id="cart-container">
+            <!-- <div class="cart-model">
+              <div class="cart-img">
+                <img src="${img}" alt="Hero image" height="50px" />
+              </div>
+              <div class="cart-name">${title}</div>
+              <div class="cart-price"><span>$</span> ${price}</div>
+              <div class="cart-price-up-down">
+                <i class="fa-solid fa-caret-up"></i>
+                0
+                <i class="fa-solid fa-caret-down"></i>
+              </div>
+            </div> -->
+          </div>
           <div class="cart-total-container">
             <div class="cart-total">TOTAL</div>
             <div class="cart-total-price"><span>$</span> 150</div>
