--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
             </div> -->
           </div>
           <div class="cart-total-container">
-            <div class="cart-total">TOTAL</div>
-            <div class="cart-total-price"><span>$</span> 150</div>
+            <div class="cart-total-price">
+              <div class="cart-total">TOTAL</div>
+              <span class="cart-total-dolar">$</span>
+              <span class="cart-total-value">150</span>
+            </div>
+            <div class="actions-total-container">
+              <button class="empty-cart-btn">Empty Cart</button>
+              <button class="buy-cart-btn">Buy</button>
+            </div>
           </div>
         </div>
         <div class="overlay"></div>
