Mobile Media Queries

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
         <li class="nav-item">
           <a href="/login.html"><i class="fa-sharp fa-solid fa-user"></i></a>
         </li>
-        <li class="nav-item">
-          <a href="#"><i class="fa-sharp fa-solid fa-heart"></i></a>
-        </li>
         <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
             <div class="cart-bubble">0</div>
@@ -81,7 +78,7 @@
     <main>
       <section class="hero">
         <div class="hero-text">
-          The games you always wanted, at the best price...
+          <p>The games you always wanted!<span> At the best price.</span></p>
         </div>
       </section>
 
