--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="/assets/img/favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +35,9 @@
           <a href="/"><i class="fa-sharp fa-solid fa-house"></i></a>
         </li>
         <li class="nav-item">
-          <a href="/login.html"><i class="fa-sharp fa-solid fa-user"></i></a>
+          <a href="/pages/login.html"
+            ><i class="fa-sharp fa-solid fa-user"></i
+          ></a>
         </li>
         <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
@@ -45,20 +47,7 @@
 
         <div class="cart" id="cart">
           <div class="cart-title">My Games</div>
-          <div class="cart-container" id="cart-container">
-            <!-- <div class="cart-model">
-              <div class="cart-img">
-                <img src="${img}" alt="Hero image" height="50px" />
-              </div>
-              <div class="cart-name">${title}</div>
-              <div class="cart-price"><span>$</span> ${price}</div>
-              <div class="cart-price-up-down">
-                <i class="fa-solid fa-caret-up"></i>
-                0
-                <i class="fa-solid fa-caret-down"></i>
-              </div>
-            </div> -->
-          </div>
+          <div class="cart-container" id="cart-container"></div>
           <div class="cart-total-container">
             <div class="cart-total-price">
               <div class="cart-total">TOTAL</div>
@@ -135,6 +124,6 @@
     </main>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
