--- a/pages/login.html
+++ b/pages/login.html
@@ -9,7 +9,7 @@
       href="/assets/img/joystick.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/login-register.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,14 +23,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Register</title>
+    <title>Login</title>
   </head>
   <body>
-    <div class="login-card register">
-      <div class="back-icon-register">
+    <div class="login-card">
+      <div class="back-icon">
         <a href="/index.html"><i class="fa-solid fa-caret-left"></i></a>
       </div>
-      <h1 class="login-title">Register</h1>
+      <h1 class="login-title">Login</h1>
       <hr />
       <form class="login-form">
         <div>
@@ -40,23 +40,16 @@
           <input class="input-form" type="email" placeholder="user@user.com" />
         </div>
         <div>
-          <label class="label-form" for="">
-            <i class="fa-solid fa-unlock"></i
-          ></label>
-          <input class="input-form" type="password" placeholder="password" />
-        </div>
-        <div>
           <label class="label-form" for=""
             ><i class="fa-solid fa-lock"></i
           ></label>
-          <input
-            class="input-form"
-            type="password"
-            placeholder="repeat password"
-          />
+          <input class="input-form" type="password" placeholder="password" />
         </div>
-        <button class="btn-register" type="submit">Registrarse</button>
-        <small>¿Ya tienes una cuenta? <a href="/login.html">Login</a></small>
+        <button class="btn-login" type="submit">Login</button>
+        <small
+          >No tienes cuenta?
+          <a href="/pages/register.html">Registrate</a></small
+        >
       </form>
     </div>
   </body>
