Login and Register finished

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         </li>
         <li class="nav-item">
           <a href="/pages/login.html"
-            ><i class="fa-sharp fa-solid fa-user"></i
+            ><i class="fa-sharp fa-solid fa-user login-icon"></i
           ></a>
+          <i class="fa-solid fa-user-slash log-out"></i>
         </li>
         <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
