Adding Light-mode

--- a/pages/login.html
+++ b/pages/login.html
@@ -29,9 +29,8 @@
     <div class="warning">
       <i class="fa-solid fa-exclamation warning-icon"></i>
       <p class="warning-text">
-        El Login funciona de manera correcta con un único usuario que se
-        registre previamente, pero a fines de ejemplo los datos serán guardados
-        (de manera visible) en LocalStorage.
+        The login works correctly with the user who registers previously, but as
+        an example the data will be saved (visibly) in LocalStorage.
       </p>
     </div>
     <div class="login-card">
@@ -57,7 +56,7 @@
         <button class="btn-login" type="submit">Login</button>
       </form>
       <small
-        >No tienes cuenta? <a href="/pages/register.html">Registrate</a></small
+        >Not register yet? <a href="/pages/register.html">Register</a></small
       >
       <small>Back to <a href="/index.html">Home</a></small>
     </div>
