--- a/pages/register.html
+++ b/pages/register.html
@@ -29,9 +29,8 @@
     <div class="warning">
       <i class="fa-solid fa-exclamation warning-icon"></i>
       <p class="warning-text">
-        El Login funciona de manera correcta con el usuario que se registre
-        previamente, pero a fines de ejemplo los datos serán guardados (de
-        manera visible) en LocalStorage.
+        The login works correctly with the user who registers previously, but as
+        an example the data will be saved (visibly) in LocalStorage.
       </p>
     </div>
     <div class="login-card register">
@@ -67,7 +66,7 @@
         <button class="btn-register" type="submit">Registrarse</button>
       </form>
       <small
-        >¿Ya tienes una cuenta? <a href="/pages/login.html">Login</a></small
+        >Already have an account? <a href="/pages/login.html">Login</a></small
       >
       <small>Back to <a href="/index.html">Home</a></small>
     </div>
