--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <title>Gamefer</title>
   </head>
-  <body>
+  <body id="body">
     <header class="header">
       <div class="logo-img">
         <img src="/assets/img/Logo.png" alt="Logo image" />
@@ -39,6 +39,9 @@
             ><i class="fa-sharp fa-solid fa-user login-icon"></i
           ></a>
           <i class="fa-solid fa-user-slash log-out"></i>
+        </li>
+        <li class="nav-item">
+          <i class="fa-solid fa-circle-half-stroke" id="btn-light"></i>
         </li>
         <div class="cart-label">
           <i class="fa-sharp fa-solid fa-cart-shopping cart-icon">
@@ -70,7 +73,9 @@
         <div class="hero-text">
           <p>The games you always wanted!<span> At the best price.</span></p>
         </div>
+        <button class="btn-hero">Can't wait</button>
       </section>
+      <img class="img-wave" src="/assets/img/wave-2.svg" alt="Waves" />
 
       <section class="category">
         <button class="btn-category selected" data-category="all">
@@ -117,6 +122,7 @@
         </button>
       </section>
 
+      <img src="/assets/img/wave.svg" alt="Waves" />
       <footer class="footer">
         <li class="footer-item"><a href="#">Github</a></li>
         <li class="footer-item"><a href="#">Instagram</a></li>
