--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <nav class="nav">
         <li class="nav-item">
-          <a href="/"><i class="fa-sharp fa-solid fa-house"></i></a>
+          <a href="#body"><i class="fa-sharp fa-solid fa-house"></i></a>
         </li>
         <li class="nav-item">
           <a href="/pages/login.html"
