--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
         <div class="hero-text">
           <p>The games you always wanted!<span> At the best price.</span></p>
         </div>
-        <button class="btn-hero">Can't wait</button>
+        <a href="#section-category"
+          ><button class="btn-hero">Can't wait</button></a
+        >
       </section>
       <img class="img-wave" src="/assets/img/wave-2.svg" alt="Waves" />
 
-      <section class="category">
+      <section class="category" id="section-category">
         <button class="btn-category selected" data-category="all">
           🌟 SHOW ALL 🌟
         </button>
