--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
           <a href="#body"><i class="fa-sharp fa-solid fa-house"></i></a>
         </li>
         <li class="nav-item">
+          <a href="#contact"><i class="fa-sharp fa-solid fa-phone"></i></a>
+        </li>
+        <li class="nav-item">
           <a href="/pages/login.html"
             ><i class="fa-sharp fa-solid fa-user login-icon"></i
           ></a>
@@ -71,11 +74,19 @@
     <main>
       <section class="hero">
         <div class="hero-text">
-          <p>The games you always wanted!<span> At the best price.</span></p>
+          <p>The games you want.<span> At the best price.</span></p>
+          <div class="hero-img">
+            <img src="./assets/img/hero.gif" alt="Hero Gif" />
+          </div>
         </div>
-        <a href="#section-category"
-          ><button class="btn-hero">Can't wait</button></a
-        >
+        <div class="hero-btn">
+          <a href="#section-category"
+            ><button class="btn-hero">🎮 Games 🎮</button></a
+          >
+          <a href="./pages/login.html"
+            ><button class="btn-login">👽 Login 👽</button></a
+          >
+        </div>
       </section>
       <img class="img-wave" src="/assets/img/wave-2.svg" alt="Waves" />
 
@@ -125,10 +136,30 @@
       </section>
 
       <img src="/assets/img/wave.svg" alt="Waves" />
-      <footer class="footer">
-        <li class="footer-item"><a href="#">Github</a></li>
-        <li class="footer-item"><a href="#">Instagram</a></li>
-        <li class="footer-item"><a href="#">Portfolio</a></li>
+      <footer class="footer" id="contact">
+        <div class="footer-row-1">
+          <div class="footer-contact">
+            <div><i class="fa-sharp fa-solid fa-phone"></i>+11-1111-1111</div>
+            <div><i class="fa-solid fa-envelope"></i> gamefer@contact.com</div>
+            <div>
+              <i class="fa-sharp fa-solid fa-location-dot"></i> Game Street N°78
+            </div>
+
+            <div class="footer-social">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-brands fa-tiktok"></i>
+            </div>
+          </div>
+
+          <div class="footer-img">
+            <img src="./assets/img/contact.gif" alt="Contact Gif" />
+          </div>
+        </div>
+
+        <div class="footer-copyright">Copyright ©2023 Gamefer</div>
       </footer>
     </main>
 
