Display none to btn-login when is logged

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <a href="#section-category"
             ><button class="btn-hero">🎮 Games 🎮</button></a
           >
-          <a href="./pages/login.html"
+          <a href="./pages/login.html" id="btn-login"
             ><button class="btn-login">👽 Login 👽</button></a
           >
         </div>
